--- a/index.html
+++ b/index.html
@@ -94,9 +94,6 @@
             wholeLock.add(gltf.scene)
         })
 
-        // const axesHelper = new THREE.AxesHelper(5);
-        // scene.add(axesHelper);
-
         let pins, tmp;
         loader.load("pin.glb", function (gltf) {
             pins = [];
@@ -135,6 +132,9 @@
             }
         })
 
+        // const axesHelper = new THREE.AxesHelper(5);
+        // scene.add(axesHelper);
+
         const light = new THREE.AmbientLight(0x505050); // soft white light
         scene.add(light);
         const pointLight = new THREE.PointLight(0xffffff, 2, 100);
@@ -143,14 +143,16 @@
 
         // camera.position.z = 8;
         // camera.position.z = 6;
-        // camera.position.x = -2;
-        camera.position.z = 4;
+
+        // Object { x: -0.6061249999999999, y: 0.496375, z: 3.503175, … }
+        camera.position.x = -0.60;
         camera.position.y = 0.5;
-        // camera.lookAt(1, 0, 0);
+        camera.position.z = 3.5;
+        // Object { x: -0.16997268271786875, y: 0.052115425296458656, z: -0.1686077885387968, … }
+        ctr.target = new THREE.Vector3(-0.2, 0, -0.17);
+        ctr.update();
 
-
-        // wholeLock.rotation.x = Math.PI / 2;
-        wholeLock.position.x = 2;
+        wholeLock.position.x = 2.5;
         wholeLock.rotation.z = Math.PI / 2;
 
         let test = 0;
