--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@
         const light = new THREE.AmbientLight(0x505050); // soft white light
         scene.add(light);
         const pointLight = new THREE.PointLight(0xffffff, 2, 100);
-        pointLight.position.set(2, 2, 2);
+        pointLight.position.set(1.5, 2, 2);
         scene.add(pointLight);
+        // const pointLightHelper = new THREE.PointLightHelper(pointLight, 1);
+        // scene.add(pointLightHelper)
 
         // camera.position.z = 8;
         // camera.position.z = 6;
